--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Despacho Jurídico González</title>
+  <title> EMIS CR Abogados y Agentes Inmobiliarios </title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -49,8 +49,8 @@
 <body>
 
   <header>
-    <h1>Despacho Jurídico González</h1>
-    <p>Confianza, Ética y Experiencia Legal</p>
+    <h1>EMIS CR Abogados y Agentes Inmobiliarios</h1>
+    <p>Tu respaldo legal e inmobiliario con confianza, ética y experiencia comprobada</p>
   </header>
 
   <nav>
@@ -62,33 +62,43 @@
 
   <section id="inicio">
     <h2>Bienvenido</h2>
-    <p>Somos un despacho de abogados con más de 10 años de experiencia en derecho familiar, civil y penal. Nuestro compromiso es ofrecer soluciones legales con integridad y profesionalismo.</p>
+    <p>En EMIS CR Abogados y Agentes Inmobiliarios, somos una firma comprometida con ofrecer soluciones legales e inmobiliarias integrales, confiables y personalizadas. Conformado por un equipo de abogados especializados y asesores inmobiliarios con amplia trayectoria, nuestro objetivo es proteger tu inversión y garantizar cada paso del proceso legal y de compra-venta de inmuebles.
+
+Ya sea que necesites asesoría jurídica, representación legal, o apoyo en la compra, venta o alquiler de propiedades, en EMIS CR te acompañamos con ética, transparencia y conocimiento del mercado.</p>
   </section>
 
   <section id="servicios">
     <h2>Servicios</h2>
     <ul>
-      <li>Asesoría legal personalizada</li>
-      <li>Derecho familiar: divorcios, custodias, pensiones</li>
-      <li>Derecho civil: contratos, demandas, propiedades</li>
-      <li>Derecho penal: defensa y representación</li>
+      <li>Asesoría legal civil, mercantil y notarial</li>
+      <li>Elaboración y revisión de contratos</li>
+      <li>Testamentos y sucesiones</li>
+      <li>Trámites de herencias</li>
+      <li>Constitución de sociedades</li>
+      <li>Certificaciones registrales</li>
     </ul>
   </section>
 
   <section id="nosotros">
     <h2>Nosotros</h2>
-    <p>Nuestro equipo está formado por abogados certificados con amplia experiencia en distintas ramas del derecho. Trabajamos con ética, empatía y eficiencia.</p>
+    <p>En EMIS CR Abogados y Agentes Inmobiliarios unimos el conocimiento jurídico con la experiencia en bienes raíces para ofrecer un servicio integral, confiable y transparente.
+
+Somos un despacho conformado por profesionales en derecho y asesores inmobiliarios especializados, comprometidos con brindar soluciones legales y patrimoniales que protejan tus intereses y respalden cada decisión importante.
+
+Ofrecemos atención personalizada en asuntos legales, registrales, notariales y de inversión inmobiliaria, con un enfoque ético, humano y orientado a resultados.
+
+Nuestra misión es que cada cliente se sienta acompañado y seguro, sabiendo que cuenta con un equipo que entiende el valor de su tiempo, su patrimonio y su tranquilidad.</p>
   </section>
 
   <section id="contacto">
     <h2>Contacto</h2>
-    <p>Email: contacto@despachogonzalez.com</p>
-    <p>Teléfono: (662) 123-4567</p>
+    <p>Email: .com</p>
+    <p>Teléfono: (662) 17</p>
     <p>Ubicación: Hermosillo, Sonora, México</p>
   </section>
 
   <footer>
-    &copy; 2025 Despacho Jurídico González. Todos los derechos reservados.
+    &copy; 2025 EMISCR. Todos los derechos reservados.
   </footer>
 
 </body>
